--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 html,
 body {
     min-height: 100vh;
+    font-family: 'Times New Roman';
 }
 
 .hide {
@@ -34,7 +35,18 @@ body {
 }
 
 header {
-    height: 5vh;
+    padding: 3vh 0;
+    min-height: 7vh;
+    max-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    letter-spacing: 0.1rem;
+    border-bottom: 1px solid black;
+    background-image: url('img/default.jpg');
+    background-size: cover;
+    color: white;
 }
 
 .main {
@@ -45,7 +57,7 @@ header {
 }
 
 .search-form {
-    width: 210px;
+    width: 300px;
     display: grid;
     grid-template-rows: repeat(4, 30px);
     grid-template-columns: 1fr 1fr;
@@ -86,4 +98,14 @@ button {
 
 footer {
     height: 5vh;
+}
+
+@media only screen and (min-width: 750px) {
+    header {
+        transition: 50ms linear;
+    }
+    header:hover {
+        font-style: italic;
+        letter-spacing: 1rem;
+    }
 }
