--- a/style.css
+++ b/style.css
@@ -58,42 +58,51 @@ header {
 
 .search-form {
     width: 300px;
-    display: grid;
-    grid-template-rows: repeat(4, 30px);
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-        "title title"
-        "city-label city-input"
-        "country-label country-input"
-        "button button";
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.1rem;
 }
 
 .search-form input {
-    height: 1rem;
+    appearance: none;
+    outline: none;
+    border: 1px solid black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    padding-left: 0.2rem;
 }
 
 .title {
-    grid-area: title;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 2rem;
 }
 
-label[for='city'] {
-    grid-area: city-label;
+.city,
+.country {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 10px;
+    margin: 0 20px;
 }
 
-#city {
-    grid-area: city-input;
-}
-
+label[for='city'],
 label[for='country'] {
-    grid-area: country-label;
-}
-
-#country {
-    grid-area: country-input;
+    text-align: right;
 }
 
 button {
-    grid-area: button;
+    margin-top: 0.8rem;
+    width: fit-content;
+    padding: 0.5rem;
+    border: 1px solid black;
+    background-color: #ffeac9;
+    font-family: 'Helvetica';
+    border-radius: 1rem;
+    cursor: pointer;
 }
 
 footer {
