--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+:root {
+    --egg: #ffeac9;
+}
+
 html,
 body {
     min-height: 100vh;
@@ -68,6 +72,7 @@ header {
     border: 1px solid black;
     border-radius: 50%;
     padding: 50px;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.216);
 }
 
 .search-form input {
@@ -104,22 +109,112 @@ button {
     width: fit-content;
     padding: 0.5rem;
     border: 1px solid black;
-    background-color: #ffeac9;
+    background-color: var(--egg);
     font-family: 'Helvetica';
     border-radius: 1rem;
     cursor: pointer;
 }
 
-footer {
-    height: 5vh;
+.weather {
+    width: 250px;
+    height: 250px;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 1.3rem;
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 50px;
+    background-color: var(--egg);
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.216);
 }
 
+.place {
+    font-size: 2rem;
+}
+
+.high-low {
+    font-size: 0.9rem;
+    font-style: italic;
+}
+
+footer {
+    min-height: 7vh;
+    max-height: 20vh;
+    border-top: 1px solid black;
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+}
+
+.block-1 {
+    background-color: #000000;
+}
+
+.block-2 {
+    background-color: #9e9e9e;
+}
+
+.block-3 {
+    background-color: #96a0bd;
+}
+
+.block-4 {
+    background-color: #c0d0f6;
+}
+
+.block-5 {
+    background-color: #4173eb;
+}
+
+.block-6 {
+    background-color: #37c40c;
+}
+
+.block-7 {
+    background-color: #ffc222;
+}
+
+.block-8 {
+    background-color: #fff700;
+}
+
+.block-9 {
+    background-color: #ffffff;
+}
+
+
+
 @media only screen and (min-width: 750px) {
-    header {
+    header,
+    .place,
+    .description,
+    .temp,
+    .high-low {
         transition: 50ms linear;
     }
+
     header:hover {
         font-style: italic;
         letter-spacing: 1rem;
+        text-indent: 1rem;
     }
+
+    .place:hover {
+        font-style: italic;
+        letter-spacing: 0.5rem;
+        text-indent: 0.5rem;
+    }
+
+    .description:hover,
+    .temp:hover {
+        font-style: italic;
+    }
+
+    .high-low:hover {
+        font-style: normal;
+    }
+
 }
