--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ body {
     src: url('font/eb-garamond/EBGaramond-Regular.ttf');
 }
 
-.hide {
-    display: none;
-}
-
 .apostrophe {
     font-family: 'EB Garamond';
 }
@@ -89,13 +85,13 @@ header {
     background-image: url('img/day.jpg');
     background-size: cover;
     color: white;
+    text-shadow: 0 0 5px black;
 }
 
 header.night {
     filter: none;
     backdrop-filter: none;
     -webkit-backdrop-filter: none;
-    text-shadow: 0 0 6px black;
 }
 
 .main {
@@ -106,6 +102,8 @@ header.night {
 }
 
 .search-form {
+    background-image: url('img/form-bg.jpg');
+    background-size: cover;
     width: 250px;
     height: 250px;
     display: flex;
@@ -114,20 +112,20 @@ header.night {
     justify-content: center;
     align-items: center;
     font-size: 1.1rem;
-    border: 1px solid black;
     border-radius: 50%;
     padding: 50px;
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.216);
+    color: white;
+    text-shadow: 0 0 5px black;
 }
 
 .search-form input {
     appearance: none;
     outline: none;
-    border: 1px solid black;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    padding-left: 0.2rem;
+    border: none;
+    border-radius: 15px;
+    padding-left: 0.4rem;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.216);
 }
 
 .title {
@@ -147,17 +145,23 @@ header.night {
 label[for='city'],
 label[for='country'] {
     text-align: right;
+    width: 3rem;
 }
 
 button {
+    font-family: 'Torre Farfan';
+    font-size: 1.3rem;
     margin-top: 0.8rem;
     width: fit-content;
-    padding: 0.5rem;
-    border: 1px solid black;
-    background-color: var(--turner);
-    font-family: 'Helvetica';
-    border-radius: 1rem;
+    padding: 0.8rem;
+    background-color: white;
+    border: none;
+    border-radius: 20px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .weather {
@@ -244,6 +248,10 @@ footer {
         text-indent: 1rem;
     }
 
+    button:hover {
+        font-style: italic;
+    }
+
     .place:hover {
         font-style: italic;
         letter-spacing: 0.3rem;
@@ -259,4 +267,8 @@ footer {
         font-style: normal;
     }
 
+}
+
+.hide {
+    display: none;
 }
