--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .night {
-    filter: brightness(80%);
+    filter: brightness(90%);
     backdrop-filter: brightness(80%);
     -webkit-backdrop-filter: brightness(80%);
 }
@@ -99,6 +99,11 @@ header.night {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.search-form,
+.weather {
+    position: relative;
 }
 
 .search-form {
@@ -142,6 +147,10 @@ header.night {
     margin: 0 20px;
 }
 
+.country {
+    margin-bottom: 3rem;
+}
+
 label[for='city'],
 label[for='country'] {
     text-align: right;
@@ -150,26 +159,31 @@ label[for='country'] {
 
 button {
     font-family: 'Torre Farfan';
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-top: 0.8rem;
-    width: fit-content;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
     padding: 0.8rem;
     background-color: white;
     border: none;
-    border-radius: 20px;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     box-shadow: 0 0 7px 2px rgba(0, 0, 0, 0.216);
+    position: absolute;
+    bottom: 2rem;
+    
 }
 
 .search-again {
-    margin-top: 3rem;
     background-image: url('img/form-bg.jpg');
     background-size: cover;
     color: white;
+    font-size: 1.1rem;
+    padding: 35px;
     text-shadow: 0 0 5px black;
 }
 
@@ -197,6 +211,8 @@ button {
 .high-low {
     font-size: 0.9rem;
     font-style: italic;
+    margin-bottom: 5rem;
+
 }
 
 footer {
@@ -252,6 +268,10 @@ footer {
         transition: 50ms linear;
     }
 
+    .search-again {
+        transition: 0.4s ease-in-out;
+    }
+
     header:hover {
         font-style: italic;
         letter-spacing: 1rem;
@@ -260,6 +280,11 @@ footer {
 
     button:hover {
         font-style: italic;
+    }
+
+    .search-again:hover {
+        font-style: normal;
+        transform: rotate(600deg);
     }
 
     .place:hover {
